2007-10-14  Jens Granseuer  <jensgr@gmx.net>

	* configure.in:
	* capplets/common/gnome-theme-info.c (gnome_theme_init): query and
	monitor the xcursor icon dir for cursor themes, too (bug #469882)

2007-10-09  Bastien Nocera  <hadess@hadess.net>

	* schemas/apps_gnome_settings_daemon_keybindings.schemas.in:
	Default to using XF86* keysyms for the audio related keybindings,
	allows those to work out-of-the-box when the right keymap is
	selected (Closes: #485076)

2007-10-08  Sergey Udaltsov <svu@gnome.org>

	* configure.in: bumping libgnomekbd requirement to 2.21.1

2007-10-02  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Stephane Loeuillet <leroutier@gmail.com>

	* capplets/about-me/gnome-about-me.desktop.in.in:
	* capplets/accessibility/at-properties/at-properties.desktop.in.in:
	* capplets/accessibility/keyboard/accessibility-keyboard.desktop.in.in:
	* capplets/appearance/data/gnome-appearance-properties.desktop.in.in:
	* capplets/appearance/data/gnome-theme-installer.desktop.in.in:
	* capplets/appearance/theme-save.c:
	* capplets/default-applications/default-applications.desktop.in.in:
	* capplets/default-applications/gnome-at-session.desktop.in.in:
	* capplets/display/display-properties.desktop.in.in:
	* capplets/keybindings/keybinding.desktop.in.in:
	* capplets/keyboard/keyboard.desktop.in.in:
	* capplets/mouse/gnome-settings-mouse.desktop.in.in:
	* capplets/network/gnome-network-preferences.desktop.in.in:
	* capplets/sound/gnome-settings-sound.desktop.in.in:
	* capplets/windows/window-properties.desktop.in.in:
	* shell/gnomecc.desktop.in.in:
	* shell/gnomecc.directory.in:
	* vfs-methods/fontilus/font-method.directory.in:
	* vfs-methods/fontilus/gnome-font-viewer.desktop.in.in:
	* vfs-methods/themus/theme-method.directory.in:
	* vfs-methods/themus/themus-theme-applier.desktop.in.in:
	desktop file fixes: don't use the deprecated Encoding tag, change
	Terminal=0 to Terminal=false, remove empty Categories= (bug #481740)
