@@ -65,7 +65,7 @@
             <key>/schemas/apps/gnome_settings_daemon/keybindings/eject</key>
             <applyto>/apps/gnome_settings_daemon/keybindings/eject</applyto>
             <type>string</type>
-            <default></default>
+            <default>XF86Eject</default>
             <locale name="C">
                 <short>Eject</short>
                 <long>Eject's shortcut.</long>
@@ -89,7 +89,7 @@
             <key>/schemas/apps/gnome_settings_daemon/keybindings/search</key>
             <applyto>/apps/gnome_settings_daemon/keybindings/search</applyto>
             <type>string</type>
-            <default></default>
+            <default>XF86Search</default>
             <locale name="C">
                 <short>Search</short>
                 <long>Search's shortcut.</long>
@@ -101,7 +101,7 @@
             <key>/schemas/apps/gnome_settings_daemon/keybindings/email</key>
             <applyto>/apps/gnome_settings_daemon/keybindings/email</applyto>
             <type>string</type>
-            <default></default>
+            <default>XF86Mail</default>
             <locale name="C">
                 <short>E-mail</short>
                 <long>E-mail's shortcut.</long>
@@ -149,7 +149,7 @@
             <key>/schemas/apps/gnome_settings_daemon/keybindings/www</key>
             <applyto>/apps/gnome_settings_daemon/keybindings/www</applyto>
             <type>string</type>
-            <default></default>
+            <default>XF86WWW</default>
             <locale name="C">
                 <short>Launch web browser</short>
                 <long>Launch web browser's shortcut.</long>
@@ -160,7 +160,7 @@
             <key>/schemas/apps/gnome_settings_daemon/keybindings/media</key>
             <applyto>/apps/gnome_settings_daemon/keybindings/media</applyto>
             <type>string</type>
-            <default></default>
+            <default>XF86AudioMedia</default>
             <locale name="C">
                 <short>Media player</short>
                 <long>Media player key's shortcut.</long>
